--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 certifi==2018.1.18
 chardet==3.0.4
 click==6.7
+click-plugins==1.0.3
+cligj==0.4.0
+cycler==0.10.0
 dash==0.21.0
 dash-core-components==0.18.1
 dash-html-components==0.8.0
 dash-renderer==0.11.3
 decorator==4.2.1
+descartes==1.1.0
+Fiona==1.7.11.post1
 Flask==0.12.2
 Flask-Compress==1.4.0
+geopandas==0.3.0
 gunicorn==19.7.1
 idna==2.6
 ipython-genutils==0.2.0
@@ -16,10 +22,18 @@ Jinja2==2.10
 jsonschema==2.6.0
 jupyter-core==4.4.0
 MarkupSafe==1.0
+matplotlib==2.1.2
+munch==2.2.0
 nbformat==4.4.0
+numpy==1.14.1
+pandas==0.22.0
 plotly==2.4.1
+pyparsing==2.2.0
+pyproj==1.9.5.1
+python-dateutil==2.6.1
 pytz==2018.3
 requests==2.18.4
+Shapely==1.6.4.post1
 six==1.11.0
 traitlets==4.3.2
 urllib3==1.22
