--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cligj==0.4.0
 cycler==0.10.0
 dash==0.21.0
 dash-core-components==0.18.1
+dash-dangerously-set-inner-html==0.0.1
 dash-html-components==0.8.0
 dash-renderer==0.11.3
 decorator==4.2.1
